# madoka

./: .gitattributes  .gitignore  LICENSE  Makefile.am  common.props  configure.ac  madoka.sln  madoka.vcxproj
include/madoka/: common.h
include/madoka/concurrent/: condition_variable.h  critical_section.h  lock_guard.h  lockable.h  read_write_lock.h
include/madoka/io/: abstract_stream.h  handle_stream.h  pipe_stream.h  stream.h
include/madoka/net/: abstract_socket.h  address_info.h  async_datagram_socket.h  async_server_socket.h  async_socket.h  common.h  datagram_socket.h  resolver.h  server_socket.h  socket.h  socket_event_listener.h  socket_stream.h  winsock.h
madoka/net/: abstract_socket.h  address_info.h  datagram_socket.h  server_socket.h  socket.h
src/concurrent/: condition_variable_posix.cpp  condition_variable_win.cpp  critical_section_posix.cpp  critical_section_win.cpp  internals.h  lock_guard.cpp  read_write_lock_posix.cpp  read_write_lock_win.cpp
src/io/: abstract_stream_impl.h  abstract_stream_win.cpp  handle_stream_impl.h  handle_stream_win.cpp  pipe_stream_win.cpp
src/net/: async_datagram_socket_win.cpp  async_server_socket_win.cpp  async_socket_win.cpp  socket_stream_win.cpp
